generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum TicketStatus {
  OPEN
  IN_PROGRESS
  COMPLETED
  CLOSED
}

enum Priority {
  HIGH
  MEDIUM
  LOW
}

enum PaymentStatus {
  PENDING
  COMPLETED
}

enum UserRole {
  USER
  ADMIN
}
// cnic is optional beacuse if citizen dosent hacve cnic they can still create ticket with email or phone
model User {
  id        Int       @id @default(autoincrement())
  name      String
  cnic      String?   @unique
  email     String?   @unique
  phone     String?
  password  String?   
  role      UserRole  @default(USER)
  createdAt DateTime  @default(now())

  tickets   Ticket[]
  payments  Payment[]
  chatbotLogs ChatbotLog[]
}

model Agent {
  id         Int       @id @default(autoincrement())
  name       String
  email      String    @unique
  username   String    @unique
  password   String
  maxTickets Int       @default(5)
  createdAt  DateTime  @default(now())

  tickets    Ticket[]
}

model Service {
  id          Int       @id @default(autoincrement())
  name        String
  description String?
  fee         Float     @default(0)
  defaultPriority Priority @default(MEDIUM)

  tickets     Ticket[]
  requiredDocuments RequiredDocument[]
}

model RequiredDocument {
  id          Int      @id @default(autoincrement())
  serviceId   Int
  documentName String
  description String?
  isMandatory Boolean  @default(true)
  createdAt   DateTime @default(now())

  service     Service  @relation(fields: [serviceId], references: [id], onDelete: Cascade)
}

model Ticket {
  id               Int          @id @default(autoincrement())
  userId           Int
  agentId          Int?
  serviceId        Int

  // PRIORITY SYSTEM
  servicePriority  Priority     // from Service.defaultPriority
  customerPriority CustomerPriority @default(NORMAL) // user-selected
  finalPriority    Int          // servicePriority - boost

  // QUEUE SYSTEM
  queuePosition    Int?         // Position in queue (1 = first)

  status           TicketStatus @default(OPEN)
  createdAt        DateTime     @default(now())
  closedAt         DateTime?

  user             User         @relation(fields: [userId], references: [id])
  agent            Agent?       @relation(fields: [agentId], references: [id])
  service          Service      @relation(fields: [serviceId], references: [id])
  logs             TicketLog[]
  documents        UploadedDocument[]
  payment          Payment?
  delivery         Delivery?
  
  // Indexes for quick fetching based on status, priority, and queue position    
  @@index([status])
  @@index([queuePosition])
  @@index([customerPriority, finalPriority, createdAt])
  @@index([agentId, status])
  @@index([userId, createdAt])
}
enum CustomerPriority {
  NORMAL
  URGENT
}

model TicketLog {
  id        Int       @id @default(autoincrement())
  ticketId  Int
  message   String
  time      DateTime  @default(now())

  ticket    Ticket    @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  
  @@index([ticketId])
}

model UploadedDocument {
  id        Int       @id @default(autoincrement())
  ticketId  Int
  filePath  String
  fileType  String
  uploadedAt DateTime @default(now())

  ticket    Ticket    @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  
  @@index([ticketId])
}

model Payment {
  id            Int             @id @default(autoincrement())
  ticketId      Int             @unique
  userId        Int
  amount        Float
  status        PaymentStatus   @default(PENDING)
  paymentMethod String?         // "ONLINE" or "CASH_ON_DELIVERY"
  transactionId String?         // For online payments
  paidAt        DateTime?       // When payment was completed
  createdAt     DateTime        @default(now())

  ticket        Ticket  @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  user          User    @relation(fields: [userId], references: [id])
  
  @@index([userId])
  @@index([status])
}

model Delivery {
  id                Int       @id @default(autoincrement())
  ticketId          Int       @unique
  address           String
  city              String
  phone             String
  status            DeliveryStatus @default(PENDING)
  trackingNumber    String?   // Generated tracking number
  agentName         String?   // Delivery agent name
  agentPhone        String?   // Delivery agent contact
  estimatedDelivery DateTime? // Expected delivery date
  actualDelivery    DateTime? // Actual delivery date
  notes             String?   @db.Text // Delivery notes/instructions
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @default(now()) @updatedAt

  ticket            Ticket    @relation(fields: [ticketId], references: [id], onDelete: Cascade)
  
  @@index([status])
  @@index([trackingNumber])
}

enum DeliveryStatus {
  PENDING
  DISPATCHED
  IN_TRANSIT
  DELIVERED
  CANCELLED
}

model ChatbotLog {
  id          Int       @id @default(autoincrement())
  userId      Int?      // Nullable: guest user might chat
  question    String    @db.Text
  response    String    @db.Text
  createdAt   DateTime  @default(now())
  isHelpful   Boolean?  // Optional field for user feedback

  user        User?            @relation(fields: [userId], references: [id])
}


// to store otp
model OTP {
  id          Int      @id @default(autoincrement())
  email       String?
  phoneNumber String?
  code        String?
  expireat    DateTime? @db.DateTime(3)
  verified    Boolean  @default(false)
  attempts    Int      @default(0)  // Track failed verification attempts
  metaData    String?  @db.Text
  createdAt   DateTime @default(now())
  
  @@index([email, code])
  @@index([expireat])
}

// // NextAuth Session Management
// model Account {
//   id                String  @id @default(cuid())
//   userId            String
//   type              String
//   provider          String
//   providerAccountId String
//   refresh_token     String? @db.Text
//   access_token      String? @db.Text
//   expires_at        Int?
//   token_type        String?
//   scope             String?
//   id_token          String? @db.Text
//   session_state     String?

//   @@unique([provider, providerAccountId])
// }

// model Session {
//   id           String   @id @default(cuid())
//   sessionToken String   @unique
//   userId       String
//   userType     String   // 'USER', 'ADMIN', or 'AGENT'
//   expires      DateTime
// }

// model VerificationToken {
//   identifier String
//   token      String   @unique
//   expires    DateTime

//   @@unique([identifier, token])
// }

model VisitorCount {
  id          Int      @id @default(autoincrement())
  ipAddress   String?  
  userAgent   String?  @db.Text
  page        String?
  visitedAt   DateTime @default(now())
  
  @@index([visitedAt])
  @@index([ipAddress])
}
